--- a/projetogov.htlm.html
+++ b/projetogov.htlm.html
@@ -1,8 +1,8 @@
-<!Script feito por Primus InfoTec®.Livre para edições e para alterações>
-<!Não se esqueça de sempre que alterar um dado mudar tambem no campo NAME="" para que seja fácil o reconhecimento na hora que você for verificar em seu e-mail>
+<!Script feito por Primus InfoTecÂ®.Livre para ediÃ§Ãµes e para alteraÃ§Ãµes>
+<!NÃ£o se esqueÃ§a de sempre que alterar um dado mudar tambem no campo NAME="" para que seja fÃ¡cil o reconhecimento na hora que vocÃª for verificar em seu e-mail>
 <!Sou grato a Deus por tuda a sabedoria que tenho e que conquistarei!>
 <html>
-<head><title>Formulário</title>
+<head><title>FormulÃ¡rio</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
@@ -29,26 +29,26 @@
 <p>Preencha as informa&ccedil;oes abaixo:
 <p>
 <strong>Gosta de clicar em link?</strong><br>
-Sim/Não
+Sim/NÃ£o
 <select name="multipla escolha">
 <option>Sim</option>
-<option>Não</option>
+<option>NÃ£o</option>
 </select>
 <p>
 <br>
 <strong>Esta no grupo familia nascimento?</strong><br>
-Sim/Não
+Sim/NÃ£o
 <select name="multipla escolha">
 <option>Sim</option>
-<option>Não</option>
+<option>NÃ£o</option>
 </select>
 <p>
 <br>
 <strong>Vai compartilhar esse link?</strong><br>
-Sim/Não
+Sim/NÃ£o
 <select name="multipla escolha">
 <option>Sim</option>
-<option>Não</option>
+<option>NÃ£o</option>
 </select>
 <br>
 <p>
